@@ -1,4 +1,4 @@
-(function() {
+(function () {
 
 	Ext.define('CMDBuild.controller.common.field.multiselect.Group', {
 		extend: 'CMDBuild.controller.common.abstract.Base',
@@ -6,7 +6,7 @@
 		requires: ['CMDBuild.core.constants.Proxy'],
 
 		/**
-		 * @cfg {Mixed}
+		 * @cfg {Object}
 		 */
 		parentDelegate: undefined,
 
@@ -14,9 +14,10 @@
 		 * @cfg {Array}
 		 */
 		cmfgCatchedFunctions: [
-			'onFieldMultiselectGroupGetStore',
 			'onFieldMultiselectGroupReset',
-			'onFieldMultiselectGroupSelectAll'
+			'onFieldMultiselectGroupStoreGet',
+			'onFieldMultiselectGroupSelectAll',
+			'onFieldMultiselectGroupValueGet'
 		],
 
 		/**
@@ -25,26 +26,42 @@
 		view: undefined,
 
 		/**
-		 * Forwarder method
-		 *
-		 * @returns {Ext.data.Store}
+		 * @returns {Void}
 		 */
-		onFieldMultiselectGroupGetStore: function () {
-			return this.view.boundList.getStore();
-		},
-
 		onFieldMultiselectGroupReset: function () {
 			this.view.setValue();
 		},
 
+		/**
+		 * Forwarder method
+		 *
+		 * @returns {Ext.data.Store}
+		 */
+		onFieldMultiselectGroupStoreGet: function () {
+			return this.view.boundList.getStore();
+		},
+
+		/**
+		 * @returns {Void}
+		 */
 		onFieldMultiselectGroupSelectAll: function () {
 			var arrayGroups = [];
 
-			Ext.Array.forEach(this.view.getStore().getRange(), function (record, i, allRecords) {
-				arrayGroups.push(record.get(CMDBuild.core.constants.Proxy.NAME));
+			Ext.Array.each(this.view.getStore().getRange(), function (record, i, allRecords) {
+				if (Ext.isObject(record) && !Ext.Object.isEmpty(record) && Ext.isFunction(record.get))
+					arrayGroups.push(record.get(CMDBuild.core.constants.Proxy.NAME));
 			}, this);
 
 			this.view.setValue(arrayGroups);
+		},
+
+		/**
+		 * @param {String} value
+		 *
+		 * @returns {Array}
+		 */
+		onFieldMultiselectGroupValueGet: function (value) {
+			return Ext.isString(value[0]) ? value : [];
 		}
 	});
 
